--- a/platformio.ini
+++ b/platformio.ini
@@ -18,22 +18,18 @@ framework = arduino
 lib_ldf_mode = deep+
 monitor_speed = 115200
 
-[extra]
-lib_deps_external =
-	davetcc/TaskManagerIO@^1.3.0
-	stm32duino/STM32duino Low Power@^1.1.1
-	stm32duino/STM32duino RTC@^1.2.0
-	bxparks/AceSorting@^1.0.0
-	https://github.com/Arvernus/MappingIO.git
-	https://github.com/Arvernus/CLI.git
-	https://github.com/Arvernus/BatShutOff.git
-	https://github.com/Arvernus/Balancer.git
-
 [env:IROCK_424_v1_0]
 board = IROCK_424_v1_0
 lib_deps = 
 	lib/IROCK_424_V1_0
-	${extra.lib_deps_external}
+	davetcc/TaskManagerIO@^1.3.0
+	stm32duino/STM32duino Low Power@^1.1.1
+	stm32duino/STM32duino RTC@^1.2.0
+	bxparks/AceSorting@^1.0.0
+	irock/MappingIO@^0.0.22
+	irock/CLI@^0.0.24
+	irock/BatShutOff@^0.0.27
+	irock/Balancer@^0.0.24
 build_flags =
 	-Iinclude
 	-D MAPPING_IO_PIN_LIST=\"PinList.h\"
