updatet bat shutof

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,7 +28,7 @@ lib_deps =
 	bxparks/AceSorting@^1.0.0
 	irock/MappingIO@^0.0.22
 	irock/CLI@^0.0.24
-	https://github.com/Arvernus/BatShutOff.git
+	irock/BatShutOff@^0.0.27
 	irock/Balancer@^0.0.24
 build_flags =
 	-Iinclude
