--- a/platformio.ini
+++ b/platformio.ini
@@ -9,33 +9,60 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = IROCK_424_v1_0
+default_envs = IROCK_424_v1_0, IROCK_424_v1_1, IROCK_424_v1_11
 description = iRock 424 OS
 
 [env]
 platform = ststm32
 framework = arduino
-lib_ldf_mode = deep+
 monitor_speed = 115200
 
-[env:IROCK_424_v1_0]
-board = IROCK_424_v1_0
-lib_deps = 
-	lib/IROCK_424_V1_0
-	davetcc/TaskManagerIO@^1.3.0
-	stm32duino/STM32duino Low Power@^1.1.1
-	stm32duino/STM32duino RTC@^1.2.0
-	bxparks/AceSorting@^1.0.0
-	irock/MappingIO@^0.0.22
-	irock/CLI@^0.0.22
-	irock/BatShutOff@^0.0.27
-	irock/Balancer@^0.0.24
-build_flags =
+[extra]
+build_flags_external = 
 	-Iinclude
 	-D MAPPING_IO_PIN_LIST=\"PinList.h\"
 	-D MAPPING_IO_SIGNAL_LIST=\"SignalList.h\"
 	-D MAPPING_IO_MAPPING_LIST=\"MappingList.h\"
 	-D BAT_SHUTOFF_SIGNAL_LIST=\"BatShutOffList.h\"
 	-D BALACER_SIGNAL_LIST=\"BalancerList.h\"
-	-D CURRENT_TIME=$UNIX_TIME
+	-D SSRSWITCHER_SIGNAL_LIST=\"SSRSwitcherList.h\"
 	-D TM_ENABLE_CAPTURED_LAMBDAS
+
+[env:IROCK_424_v1_0]
+board = IROCK_424_v1_0
+lib_deps = 
+	lib/IROCK_424_V1_0
+	davetcc/TaskManagerIO@^1.3.5
+	irock/BatShutOff@^0.0.27
+	irock/Balancer@^0.0.26
+	irock/CLI@^0.0.26
+	irock/MappingIO@^0.0.25
+build_flags = 
+	${extra.build_flags_external}
+	-Ilib/IROCK_424_v1_0
+
+[env:IROCK_424_v1_1]
+board = IROCK_424_v1_1
+lib_deps = 
+	lib/IROCK_424_V1_1
+	davetcc/TaskManagerIO@^1.3.5
+	irock/BatShutOff@^0.0.27
+	irock/Balancer@^0.0.26
+	irock/CLI@^0.0.26
+	irock/MappingIO@^0.0.25
+build_flags = 
+	${extra.build_flags_external}
+	-Ilib/IROCK_424_v1_1
+
+[env:IROCK_424_v1_11]
+board = IROCK_424_v1_11
+lib_deps = 
+	lib/IROCK_424_V1_11
+	davetcc/TaskManagerIO@^1.3.5
+	irock/BatShutOff@^0.0.27
+	irock/Balancer@^0.0.26
+	irock/CLI@^0.0.26
+	irock/MappingIO@^0.0.25
+build_flags = 
+	${extra.build_flags_external}
+	-Ilib/IROCK_424_v1_11
