--- a/project.json
+++ b/project.json
@@ -13,7 +13,8 @@
       "name": "Andreas Wagner"
     },
     {
-      "name": "Donald Dilocker"
+      "name": "Donald Dilocker",
+      "email": "donald@dilocker.com"
     }
   ]
 }
