--- a/project.json
+++ b/project.json
@@ -10,7 +10,8 @@
       "maintainer": true
     },
     {
-      "name": "Andreas Wagner"
+      "name": "Andreas Wagner",
+      "email": "andreas.wagner@me.com"
     },
     {
       "name": "Donald Dilocker",
