--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ build_flags_external =
 	-D MAPPING_IO_PIN_LIST=\"PinList.h\"
 	-D MAPPING_IO_SIGNAL_LIST=\"SignalList.h\"
 	-D MAPPING_IO_MAPPING_LIST=\"MappingList.h\"
-	-D BAT_SHUTOFF_SIGNAL_LIST=\"BatShutOffList.h\"
+	-D BAT_SHUTOFF_SIGNAL_LIST=\"BatShutoffList.h\"
 	-D BALACER_SIGNAL_LIST=\"BalancerList.h\"
 	-D TM_ENABLE_CAPTURED_LAMBDAS
 
@@ -32,7 +32,7 @@ board = IROCK_424_v1_0
 lib_deps = 
 	lib/IROCK_424_V1_0
 	davetcc/TaskManagerIO@^1.3.5
-	irock/BatShutOff@^1.0.0
+	irock/BatShutoff@^1.1.0
 	irock/CLI@^1.0.0
 	irock/MappingIO@^1.0.0
 	irock/Balancer@^1.0.0
@@ -45,7 +45,7 @@ board = IROCK_424_v1_1
 lib_deps = 
 	lib/IROCK_424_V1_1
 	davetcc/TaskManagerIO@^1.3.5
-	irock/BatShutOff@^1.0.0
+	irock/BatShutoff@^1.1.0
 	irock/CLI@^1.0.0
 	irock/MappingIO@^1.0.0
 	irock/Balancer@^1.0.0
@@ -58,7 +58,7 @@ board = IROCK_424_v1_11
 lib_deps = 
 	lib/IROCK_424_V1_11
 	davetcc/TaskManagerIO@^1.3.5
-	irock/BatShutOff@^1.0.0
+	irock/BatShutoff@^1.1.0
 	irock/CLI@^1.0.0
 	irock/MappingIO@^1.0.0
 	irock/Balancer@^1.0.0
