--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ description = iRock 424 OS
 platform = ststm32
 framework = arduino
 monitor_speed = 115200
+lib_ldf_mode = deep
 
 [extra]
 build_flags_external = 
