--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -8,12 +8,7 @@ on:
 
 jobs:
   dependabot:
-    runs-on: ubuntu-latest
-    name: run PlatformIO Dependabot
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: run PlatformIO Dependabot
-        uses: peterus/platformio_dependabot@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+    uses: Arvernus/PlatformIOGithubActions/.github/workflows/dependabot.yaml@main
+    secrets:
+      PLATFORMIO_AUTH_TOKEN: ${{ secrets.PLATFORMIO_AUTH_TOKEN }}
+    
