--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ platform = ststm32
 framework = arduino
 monitor_speed = 115200
 lib_ldf_mode = deep
+check_skip_packages = yes
 
 [extra]
 build_flags_external = 
