--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ framework = arduino
 monitor_speed = 115200
 lib_ldf_mode = deep
 check_skip_packages = yes
+check_tool = cppcheck, clangtidy
 
 [extra]
 build_flags_external = 
