Optimised check results

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,11 @@ platform = ststm32
 framework = arduino
 monitor_speed = 115200
 lib_ldf_mode = deep
-check_skip_packages = yes
 check_tool = cppcheck, clangtidy
+check_skip_packages = true
+check_flags =
+	cppcheck: --enable=all --std=c++11 --addon=cert.py --suppress=missingIncludeSystem
+	clangtidy: --checks=*,-llvm-include-order,-llvmlibc-*,-cppcoreguidelines-avoid-magic-numbers,-readability-magic-numbers
 
 [extra]
 build_flags_external = 
