--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ check_skip_packages = true
 check_flags = 
 	cppcheck: --enable=all --std=c++11 --addon=cert.py --suppress=missingIncludeSystem
 	clangtidy: --checks=*,-llvm-include-order,-llvmlibc-*,-cppcoreguidelines-avoid-magic-numbers,-readability-magic-numbers
+extra_scripts = pre:config_extractor.py
 
 [extra]
 build_flags_external = 
