--- a/platformio.ini
+++ b/platformio.ini
@@ -43,6 +43,7 @@ lib_deps =
 	irock/Balancer@^1.0.2
 	irock/CLI@^1.0.1
 	irock/PersistentStorage@^3.0.0
+	irock/PersistentStorage@^3.0.2
 	irock/MappingIO@^1.0.1
 build_flags = 
 	${extra.build_flags_external}
@@ -57,6 +58,7 @@ lib_deps =
 	irock/CLI@^1.0.1
 	irock/Balancer@^1.0.2
 	irock/PersistentStorage@^3.0.0
+	irock/PersistentStorage@^3.0.2
 	irock/MappingIO@^1.0.1
 build_flags = 
 	${extra.build_flags_external}
@@ -71,6 +73,7 @@ lib_deps =
 	irock/Balancer@^1.0.2
 	irock/CLI@^1.0.1
 	irock/PersistentStorage@^3.0.0
+	irock/PersistentStorage@^3.0.2
 	irock/MappingIO@^1.0.1
 build_flags = 
 	${extra.build_flags_external}
