--- a/platformio.ini
+++ b/platformio.ini
@@ -41,9 +41,10 @@ lib_deps =
 	irock/BatShutoff@^1.1.4
 	irock/Balancer@^1.0.2
 	irock/PersistentStorage@^3.1.0
-	irock/MappingIO@^1.0.1
+	irock/MappingIO@^2.0.1
 	irock/CLI@^1.0.2
 	davetcc/TaskManagerIO@^1.4.3
+	irock/ModbusToWorld@^1.0.6
 build_flags = 
 	${extra.build_flags_external}
 	-Ilib/IROCK_424_v1_0
@@ -55,9 +56,10 @@ lib_deps =
 	irock/BatShutoff@^1.1.4
 	irock/Balancer@^1.0.2
 	irock/PersistentStorage@^3.1.0
-	irock/MappingIO@^1.0.1
+	irock/MappingIO@^2.0.1
 	irock/CLI@^1.0.2
 	davetcc/TaskManagerIO@^1.4.3
+	irock/ModbusToWorld@^1.0.6
 build_flags = 
 	${extra.build_flags_external}
 	-Ilib/IROCK_424_v1_1
@@ -68,10 +70,11 @@ lib_deps =
 	lib/IROCK_424_V1_11
 	irock/BatShutoff@^1.1.4
 	irock/Balancer@^1.0.2
-	irock/MappingIO@^1.0.1
-	davetcc/TaskManagerIO@^1.4.3
 	irock/PersistentStorage@^3.1.0
+	irock/MappingIO@^2.0.1
 	irock/CLI@^1.0.2
+	davetcc/TaskManagerIO@^1.4.3
+	irock/ModbusToWorld@^1.0.6
 build_flags = 
 	${extra.build_flags_external}
 	-Ilib/IROCK_424_v1_11
