--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = IROCK_424_v1_0, IROCK_424_v1_1, IROCK_424_v1_11
+default_envs = IROCK_424_v1_0, IROCK_424_v1_1, IROCK_424_v1_11, IROCK_424_v2_0
 description = iRock 424 OS
 
 [env]
@@ -75,3 +75,17 @@ lib_deps =
 build_flags = 
 	${extra.build_flags_external}
 	-Ilib/IROCK_424_v1_11
+
+[env:IROCK_424_v2_0]
+board = IROCK_424_v2_0
+lib_deps = 
+	lib/IROCK_424_V2_0
+	irock/BatShutoff@^1.1.4
+	irock/Balancer@^1.0.2
+	irock/MappingIO@^2.0.1
+	tcmenu/TaskManagerIO@^1.5.1
+	irock/PersistentStorage@^3.1.0
+	irock/CLI@^1.0.2
+build_flags = 
+	${extra.build_flags_external}
+	-Ilib/IROCK_424_v2_0
