--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ lib_deps =
 	irock/Balancer@^1.0.2
 	irock/PersistentStorage@^3.1.0
 	irock/CLI@^1.0.2
-	davetcc/TaskManagerIO@^1.4.3
+	tcmenu/TaskManagerIO@^1.5.1
 	irock/MappingIO@^2.0.1
 build_flags = 
 	${extra.build_flags_external}
@@ -57,7 +57,7 @@ lib_deps =
 	irock/PersistentStorage@^3.1.0
 	irock/MappingIO@^1.0.1
 	irock/CLI@^1.0.2
-	davetcc/TaskManagerIO@^1.4.3
+	tcmenu/TaskManagerIO@^1.5.1
 build_flags = 
 	${extra.build_flags_external}
 	-Ilib/IROCK_424_v1_1
@@ -69,7 +69,7 @@ lib_deps =
 	irock/BatShutoff@^1.1.4
 	irock/Balancer@^1.0.2
 	irock/MappingIO@^1.0.1
-	davetcc/TaskManagerIO@^1.4.3
+	tcmenu/TaskManagerIO@^1.5.1
 	irock/PersistentStorage@^3.1.0
 	irock/CLI@^1.0.2
 build_flags = 
